fixed nav bg off center

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html,
+html,
 body {
     padding: 0;
     margin: 0;
@@ -13,11 +13,11 @@ body {
 a {
     color: inherit;
     text-decoration: none;
-} */
+}
 
-/* * {
+* {
     box-sizing: border-box;
-} */
+}
 
 @media (prefers-color-scheme: dark) {
     html {
